--- a/style_landing.css
+++ b/style_landing.css
@@ -10,6 +10,12 @@ body {
 html{
   height: 100%;
 }
+
+hr{
+  width:400px;
+  border-top: 1px solid #f8f8f8;
+  border-bottom: 1px solid rgba(0,0,0,0.2);
+}
 h1,h3{
   color:white;
 }
